--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
-    id 'java'
+    id "com.google.protobuf" version "0.8.18"
+    id "java"
+
 }
 
 group 'com.ufu.sd'
@@ -12,6 +14,43 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+
+    // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.19.2'
+
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    // https://mvnrepository.com/artifact/io.grpc/grpc-all
+    implementation group: 'io.grpc', name: 'grpc-all', version: '1.43.2'
+
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
+    }
+}
+
+protobuf {
+    protoc {
+
+        artifact = 'com.google.protobuf:protoc:3.19.2'
+    }
+
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.43.2'
+        }
+    }
+
+    generateProtoTasks {
+        all()*.plugins{
+            grpc {}
+        }
+    }
 }
 
 test {
